--- a/style.css
+++ b/style.css
@@ -11,8 +11,23 @@ body {
 .timerButtons {
     display : flex;
     justify-content: center;
-    gap: 3em;
+    gap: 2.5em;
     margin-top: 5em;
+   
+}
+
+.button {
+    background-color: #103d02;
+    color: wheat;
+    box-shadow: 0;
+    width: 6em;
+    height: 3em;
+    border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    border-radius: 2em;
 }
 
 .curvedText {
@@ -28,6 +43,12 @@ body {
     justify-content: center;
     align-items: center;
     color : var(--tomtatoGreen);
+    font-size: 5em;
+    
+}
+
+.victoryPic {
+    
 }
 
 
